remove controller for all first messages
